fix: redis caching